# EncryptedPasswordManager

./: .gitignore  CMakeLists.txt  README.md
gui/: resource.h  resource.rc  wintray_main.cpp
include/: AuthManager.hpp  DatabaseManager.hpp  EncryptionManager.hpp  UIManager.hpp  console_io.hpp  password_gen.hpp
src/: AuthManager.cpp  DatabaseManager.cpp  EncryptionManager.cpp  main.cpp
tests/: auth_gate.cpp  cred_roundtrip.cpp  crypto_gcm.cpp  db_kdf.cpp  db_master.cpp  placeholder.cpp
